tests/ui/span/send-is-not-static-ensures-scoping.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/send-is-not-static-ensures-scoping.rs:16:17
   |
LL |     let bad = {
   |         --- borrow later stored here
LL |         let x = 1;
   |             - binding `x` declared here
LL |         let y = &x;
   |                 ^^ borrowed value does not live long enough
...
LL |     };
   |     - `x` dropped here while still borrowed

error[E0597]: `y` does not live long enough
  --> $DIR/send-is-not-static-ensures-scoping.rs:20:22
   |
LL |     let bad = {
   |         --- borrow later stored here
LL |         let x = 1;
LL |         let y = &x;
   |             - binding `y` declared here
...
LL |         scoped(|| {
   |                -- value captured here
LL |             let _z = y;
   |                      ^ borrowed value does not live long enough
...
LL |     };
   |     - `y` dropped here while still borrowed

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
